# aichat-agent

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  cyberorganism_architecture.md  cymbiont_architecture.md  feature_taskpad_architectural_overhaul.md
aichat-agent-lib/: .gitignore  CLAUDE.md  Cargo.toml  README.md
aichat-agent-lib/examples/: README.md  config.example.yaml  config.yaml  math_assistant.rs
aichat-agent-lib/src/: agents.rs  functions.rs  lib.rs  repl_wrapper.rs  temp_config.rs
aichat-agent-lib/tests/: integration_test.rs
extensions/: .gitignore  README.md
extensions/logseq_dummy_graph/journals/: 2025_04_11.md  2025_04_13.md  2025_07_16.md  2025_07_17.md
extensions/logseq_dummy_graph/logseq/: config.edn
extensions/logseq_dummy_graph/pages/: contents.md  cyberorganism-test-1.md  cyberorganism-test-2.md
extensions/pkm_knowledge_graph/: .gitignore  api.js  config.example.yaml  data_processor.js  index.js  package-lock.json  package.json  sync.js
extensions/pkm_knowledge_graph/backend/: Cargo.toml  feature_taskpad_petgraph_integration.md
extensions/pkm_knowledge_graph/backend/src/: api.rs  config.rs  graph_manager.rs  logging.rs  main.rs  pkm_data.rs  pkm_datastore.rs  utils.rs
extensions/pkm_knowledge_graph/frontend/: package.json  stress_test_generator.js  (+1 more)
preserved/: .gitignore  CLAUDE.md  agent_lifecycle_analysis.md  aichat_agent_api_design.md  aichat_architecture_analysis.md  config_state_analysis.md  cymbiont_architecture.md  feature_taskpad_architectural_overhaul.md  function_calling_analysis.md  library_conversion_issues.md
