[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "backend_server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] } 
axum = "0.7.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
ctrlc = "3.4.1"
serde_yaml = "0.9"
relative-path = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
petgraph = { version = "0.6", features = ["serde-1"] }
regex = "1.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tempfile = "3.0"
